<resources>
    <string name="app_name">Stock Information App</string>
    <string name="Delete_Title">Select Stocks to Delete</string>

    <string name="hello_world">Hello world!</string>

    <string name="deleteButton">Delete Stocks</string>

    <string name="title_activity_search">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title">Dialog</string>
    <string name="yes">Add to portfolio</string>
    <string name="no">cancel</string>
    <string name="view_quote">View</string>
    <string name="searchHint">Search...</string>

    <string name="current_price">Current Price: </string>
    <string name="Percent_change">Percentage Change: </string>
    <string name="Opening_Price">Opening Price: </string>
    <string name="volume">Volume: </string>

    <string name="oneDay">1 Day</string>
    <string name="fiveDays">5 Days</string>
    <string name="oneMonth">1 Month</string>
    <string name="sixMonths">6 Months</string>
    <string name="oneYear">1 Year</string>
</resources>
