<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.Stock_Information_App.Details_fragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:orientation="vertical">


            <TextView
                android:id="@+id/companyName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24dp" />

            <ImageView
                android:id="@+id/stockChart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/oneDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:text="@string/oneDay"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/fiveDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:text="@string/fiveDays"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/oneMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:text="@string/oneMonth"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/sixMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:text="@string/sixMonths"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/oneYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:text="@string/oneYear"
                    android:textSize="14dp" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="11dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentPriceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/current_price"
                        android:textColor="#010101"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/currentPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="6dp"
                        android:textSize="20dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/percentChangeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Percent_change"
                        android:textColor="#010101"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/percentChange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="6dp"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/openingPriceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Opening_Price"
                        android:textColor="#010101"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/openingPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="6dp"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/volumeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/volume"
                        android:textColor="#010101"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="6dp"
                        android:textSize="20dp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/newsHolder">


            </LinearLayout>





        </LinearLayout>
    </ScrollView>



</FrameLayout>
